--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <div class="section_container">
                 <section class="text_a">
                     <h1>I'm Илюша — разработчик</h1>
-                    <h1>программного обеспечения</h1>
+                    <h1>программного обеспечения1</h1>
                     
                 </section>
     
                 <section class="text_b">
                     <h2>который с радостью</h2>
                     <h2>поработает на вашей</h2>
-                    <h2>галере</h2>
+                    <h2>галере2</h2>
                 </section>
 
                 <img src="img/comp.svg" alt="">
