--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="grid">
-                <a href="./3-electicscooter/">
+                <a href="./3-electricscooter/">
                     <p><img src="./img/3-electricscooter.png" alt=""></p>
                     <p>3-electricscooter</p>
 
