--- a/qazaqtutor/index.html
+++ b/qazaqtutor/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PDF Example</title>
+  <title>Qazaq Tutor Site Presentation </title>
 </head>
 <body style="margin: 0; overflow: hidden;">
   <iframe style="border: none; width: 100vw; height: 100vh;" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fj18kbHAFISHTQzibXY8LkB%2FKazakh-Tutor-0.1%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D33-4066%26viewport%3D823%252C510%252C0.2%26t%3DVBjxZ84otevDluDV-1%26scaling%3Dmin-zoom%26mode%3Ddesign" allowfullscreen></iframe>
