--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-language">
       <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+          <a href="#" class="block py-2 px-3 text-white bg-green-700 rounded md:bg-transparent md:text-green-700 md:p-0 md:dark:text-green-500" aria-current="page">Home</a>
         </li>
         <li>
-          <a href="#projects" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Projects</a>
+          <a href="#projects" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-green-700 dark:text-white md:dark:hover:text-green-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Projects</a>
         </li>
         <li>
-          <a href="#achievements" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Achievements</a>
+          <a href="#achievements" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-green-700 dark:text-white md:dark:hover:text-green-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Achievements</a>
         </li>
         <li>
-          <a href="#about" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+          <a href="#about" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-green-700 dark:text-white md:dark:hover:text-green-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
         </li>
         <li>
 
@@ -101,8 +101,72 @@
             </h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Период разработки: 07.2023 - 08.2023</p>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Стек технологий: Python Django, CSS</p>
+            <a href="https://ctm-vko.onrender.com/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                Открыть сайт
+                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
         </div>
     </div>
+    <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+        <a href="https://benchesalmaty.onrender.com/">
+            <img class="w-full" src="./assets/img/benchesalmaty.png" alt="Первое изображение" />
+        </a>
+        <div class="px-5 pb-5 pt-5">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                Карта скамеек г.Алматы (non-profit project)
+            </h5>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Период разработки: 07.2023 - 08.2023</p>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Стек технологий: Python Django, CSS</p>
+            <a href="https://benchesalmaty.onrender.com/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                Открыть сайт
+                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+        <a href="https://ctm-vko.onrender.com/">
+            <img class="w-full" src="./assets/img/wearshop.png" alt="Первое изображение" />
+        </a>
+
+        <div class="px-5 pb-5 pt-5">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                Интернет-магазин одежды и обуви (учебный проект)
+            </h5>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Период разработки: 12.2023</p>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Стек технологий: Python Django, Tailwind CSS</p>
+            <a href="https://ctm-vko.onrender.com/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                Открыть сайт
+                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+        <a href="#">
+            <img class="w-full" src="./assets/img/reread.png" alt="Первое изображение" />
+        </a>
+        <div class="px-5 pb-5 pt-5">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                ReRead - маркетплейс поддержанных книг
+            </h5>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Период разработки: 09.2023 - по н. в.</p>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Стек технологий: Python Django, Tailwind CSS, React Native</p>
+            <!--
+                <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                Открыть сайт
+                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+            -->
+        </div>
+    </div>
+
 </div>
 </div>
 
