--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
-        <a href="https://ctm-vko.onrender.com/">
+        <a href="https://wearshop.onrender.com/">
             <img class="w-full" src="./assets/img/wearshop.png" alt="Первое изображение" />
         </a>
 
@@ -105,7 +105,7 @@
             </h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Период разработки: 12.2023</p>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Стек технологий: Python Django, Tailwind CSS</p>
-            <a href="https://ctm-vko.onrender.com/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+            <a href="https://wearshop.onrender.com/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                 Открыть сайт
                  <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
