--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <!-- element -->
         <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
-            <a href="https://wearshop.onrender.com/">
+            <a href="https://wearshop-i5t4.onrender.com/">
                 <img class="w-full" src="./assets/img/wearshop.png" alt="Первое изображение" />
             </a>
 
@@ -144,7 +144,7 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Стек технологий: Python Django, Tailwind
                     CSS</p>
                 <div class="flex flex-row items-center gap-4">
-                    <a href="https://wearshop.onrender.com/"
+                    <a href="https://wearshop-i5t4.onrender.com/"
                         class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                         Открыть сайт
                         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true"
