--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body class="bg-white dark:bg-gray-900">
+    <button onclick="topFunction()" id="myBtn" title="Back to top">&nbsp;↑&nbsp;</button>
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -78,49 +80,168 @@
                 <a target="_blank"
                     class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://www.linkedin.com/in/lyarov22">
-                    <img class="h-5" src="assets/img/linkedin.png" alt="">
+                    <img class="h-5" src="assets/icons/linkedin.png" alt="">
                     LinkedIn</a>
                 <a target="_blank"
                     class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://hh.kz/resume/15be6383ff0d28244e0039ed1f5570344f6f78">
-                    <img class="h-5" src="assets/img/hh.png" alt="">
+                    <img class="h-5" src="assets/icons/hh.png" alt="">
                     HeadHunter</a>
                 <a target="_blank"
                     class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://drive.google.com/file/d/1NrA9yG2UGgtbbjD04AobjG32R61uCZxq">
-                    <img class="h-5" src="assets/img/drive.png" alt="">
+                    <img class="h-5" src="assets/icons/drive.png" alt="">
                     PDF Resume</a>
             </div>
-        <a target="_blank" href="https://t.me/totaljerkface">
-            <img class="h-48" src="./assets/img/tg-qr.png" alt="">
+            <a target="_blank" href="https://t.me/totaljerkface">
+                <img class="h-48" src="./assets/img/tg-qr.png" alt="">
+            </a>
+        </div>
+        <p class="dark:text-white pt-8 pb-4 text-2xl">My stack</p>
 
-        </a>
+        <div class="">
+            <div class="flex flex-row gap-12">
+                <div class="flex flex-col gap-3">
+                    <p class="dark:text-white text-center">Backend</p>
+                    <div
+                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        <img class="h-8 w-8 object-contain" src="assets/icons/python.png" alt="">
+                        <p class="">Python</p>
+                    </div>
+                    <div
+                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        <img class="h-7 w-7 object-contain mt-1" src="assets/icons/django.png" alt="">
+                        <p class="">Django(DRF)</p>
+                    </div>
+                    <div
+                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        <img class="h-8 w-8 object-contain" src="assets/icons/clangs.png" alt="">
+                        <p class="">C/C++, C#</p>
+                    </div>
+                </div>
+                <div class="flex flex-col gap-3">
+                    <p class="dark:text-white text-center">Frontend</p>
+                    <div
+                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        <img class="h-8 w-8 object-contain" src="assets/icons/tailwind.png" alt="">
+                        <p class="">Tailwind CSS</p>
+                    </div>
+                    <div
+                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        <img class="h-8 w-8 object-contain" src="assets/icons/react-native.png" alt="">
+                        <p class="">React Native</p>
+                    </div>
+                    <div
+                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        <img class="h-8 w-10 object-contain" src="assets/icons/htmlcssjs.png" alt="">
+                        <p class="">HTML, CSS, JS</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
     <div class="pt-16">
-        <h3 class="text-gray-900 pl-6 dark:text-white pb-4 text-2xl">Work experience</h3>
+        <h3 id="experience" class="text-gray-900 text-center dark:text-white pb-8 text-2xl">Work experience</h3>
         <div id="work-experience-container" class="flex justify-center flex-col items-center gap-10"></div>
     </div>
 
     <div class="pt-16 text-2xl">
-        <h3 class="text-gray-900 pl-6 dark:text-white pb-4">Sites</h3>
+        <h3 id="sites" class="text-gray-900 text-center pl-6 dark:text-white pb-8">Sites</h3>
         <div id="sites-container" class="flex justify-center flex-col items-center gap-10"></div>
     </div>
 
     <div class="pt-16 text-2xl">
-        <h3 class="text-gray-900 pl-6 dark:text-white pb-4">Achievements</h3>
+        <h3 id="achievements" class="text-gray-900 text-center pl-6 dark:text-white pb-8">Achievements</h3>
         <div id="achievements-container" class="flex justify-center flex-col items-center gap-10"></div>
     </div>
 
     <div class="pt-16 text-2xl">
-        <h3 class="text-gray-900 pl-6 dark:text-white pb-4">Figma</h3>
+        <h3 id="figma" class="text-gray-900 text-center pl-6 dark:text-white pb-8">Figma</h3>
         <div id="figma-projects-container" class="flex justify-center flex-col items-center gap-10"></div>
     </div>
 
+    <div class="pt-16 text-2xl">
+        <h3 id="other" class="text-gray-900 text-center pl-6 dark:text-white pb-8">Other</h3>
+        <div id="other-projects-container" class="flex justify-center flex-col items-center gap-10"></div>
+    </div>
+
+    <div class="pt-16 flex flex-col items-center gap-10">
+        <h3 id="about" class="text-2xl text-gray-900 text-center pl-6 dark:text-white">About me</h3>
+        <div class="">
+            <p class="dark:text-white text-center text-2xl font-semibold">Ilya Fedorov, 18 y.o</p>
+            <p class="dark:text-white text-center pt-2">Almaty, Kazakhstan</p>
+        </div>
+        <div class="text-lg">
+            <p class="dark:text-white text-center">🧑🏻‍💻 Fullstack Developer | Hardware • Software Engineer</p>
+            <p class="dark:text-white text-center">🏔️ Bike and mountain lover</p>
+            <p class="dark:text-white text-center">🌇 Novice trader and urbanist</p>
+        </div>
+
+        <div class="flex flex-col pb-10">
+            <p class="dark:text-white text-center pb-3">Social Links</p>
+            <div class="flex flex-col gap-3">
+                <div class="flex flex-row gap-3 justify-center">
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://www.linkedin.com/in/lyarov22">
+                        <img class="h-5" src="assets/icons/linkedin.png" alt="">
+                        LinkedIn</a>
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://hh.kz/resume/15be6383ff0d28244e0039ed1f5570344f6f78">
+                        <img class="h-5" src="assets/icons/hh.png" alt="">
+                        HeadHunter</a>
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://hh.kz/resume/15be6383ff0d28244e0039ed1f5570344f6f78">
+                        <img class="h-5" src="assets/icons/enbek.png" alt="">
+                        Enbek</a>
+                </div>
+                <div class="flex flex-row gap-3 justify-center">
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://www.linkedin.com/in/lyarov22">
+                        <img class="h-5" src="assets/icons/email.png" alt="">
+                        Email</a>
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://github.com/lyarov22">
+                        <img class="h-5" src="assets/icons/github.png" alt="">
+                        Github</a>
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://figma.com/@ryzenkz">
+                        <img class="h-5" src="assets/icons/figma.png" alt="">
+                        Figma</a>
+                </div>
+                <div class="flex flex-row gap-3 justify-center">
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://www.instagram.com/lyarov22">
+                        <img class="h-5" src="assets/icons/instagram.png" alt="">
+                        Instagram</a>
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://t.me/lyarov22">
+                        <img class="h-5" src="assets/icons/telegram.png" alt="">
+                        Telegram</a>
+                    <a target="_blank"
+                        class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                        href="https://discord.com/lyarov22">
+                        <img class="h-5" src="assets/icons/discord.png" alt="">
+                        Discord</a>
+                </div>
+            </div>
+           
+        </div>
+    </div>
+
 
     </div>
-    <script src="script.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script type="module" src="script.js"></script>
+    <script src="utils/topbutton.js"></script>
+    <script src="utils/github-buttons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
 </body>
 
