--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
         <div class="flex flex-row pt-8 gap-5 items-end">
             <div class="flex flex-col gap-5 pb-2">
                 <a target="_blank"
-                    class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    class="text-white inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://www.linkedin.com/in/lyarov22">
                     <img class="h-5" src="assets/icons/linkedin.png" alt="">
                     LinkedIn</a>
                 <a target="_blank"
-                    class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    class="text-white inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://hh.kz/resume/15be6383ff0d28244e0039ed1f5570344f6f78">
                     <img class="h-5" src="assets/icons/hh.png" alt="">
                     HeadHunter</a>
                 <a target="_blank"
-                    class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    class="text-white inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://drive.google.com/file/d/1NrA9yG2UGgtbbjD04AobjG32R61uCZxq">
                     <img class="h-5" src="assets/icons/drive.png" alt="">
                     PDF Resume</a>
@@ -194,14 +194,14 @@
                         HeadHunter</a>
                     <a target="_blank"
                         class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
-                        href="https://hh.kz/resume/15be6383ff0d28244e0039ed1f5570344f6f78">
+                        href="https://www.enbek.kz/ru/resume/5547476">
                         <img class="h-5" src="assets/icons/enbek.png" alt="">
                         Enbek</a>
                 </div>
                 <div class="flex flex-row gap-3 justify-center">
                     <a target="_blank"
                         class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
-                        href="https://www.linkedin.com/in/lyarov22">
+                        href="mailto:lyarov22">
                         <img class="h-5" src="assets/icons/email.png" alt="">
                         Email</a>
                     <a target="_blank"
@@ -228,7 +228,7 @@
                         Telegram</a>
                     <a target="_blank"
                         class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
-                        href="https://discord.com/lyarov22">
+                        href="@lyarov22">
                         <img class="h-5" src="assets/icons/discord.png" alt="">
                         Discord</a>
                 </div>
