--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
         <div class="flex flex-row pt-8 gap-5 items-end">
             <div class="flex flex-col gap-5 pb-2">
                 <a target="_blank"
-                    class="text-white inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://www.linkedin.com/in/lyarov22">
                     <img class="h-5" src="assets/icons/linkedin.png" alt="">
                     LinkedIn</a>
                 <a target="_blank"
-                    class="text-white inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://hh.kz/resume/15be6383ff0d28244e0039ed1f5570344f6f78">
                     <img class="h-5" src="assets/icons/hh.png" alt="">
                     HeadHunter</a>
                 <a target="_blank"
-                    class="text-white inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    class="inline-flex gap-2 items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
                     href="https://drive.google.com/file/d/1NrA9yG2UGgtbbjD04AobjG32R61uCZxq">
                     <img class="h-5" src="assets/icons/drive.png" alt="">
                     PDF Resume</a>
@@ -104,17 +104,17 @@
                 <div class="flex flex-col gap-3">
                     <p class="dark:text-white text-center">Backend</p>
                     <div
-                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/python.png" alt="">
                         <p class="">Python</p>
                     </div>
                     <div
-                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-7 w-7 object-contain mt-1" src="assets/icons/django.png" alt="">
                         <p class="">Django(DRF)</p>
                     </div>
                     <div
-                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/clangs.png" alt="">
                         <p class="">C/C++, C#</p>
                     </div>
@@ -122,17 +122,17 @@
                 <div class="flex flex-col gap-3">
                     <p class="dark:text-white text-center">Frontend</p>
                     <div
-                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/tailwind.png" alt="">
                         <p class="">Tailwind CSS</p>
                     </div>
                     <div
-                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/react-native.png" alt="">
                         <p class="">React Native</p>
                     </div>
                     <div
-                        class="dark:text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-10 object-contain" src="assets/icons/htmlcssjs.png" alt="">
                         <p class="">HTML, CSS, JS</p>
                     </div>
