white theme fix

--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
                 <div class="flex flex-col gap-3">
                     <p class="dark:text-white text-center">Backend</p>
                     <div
-                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/python.png" alt="">
                         <p class="">Python</p>
                     </div>
                     <div
-                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-7 w-7 object-contain mt-1" src="assets/icons/django.png" alt="">
                         <p class="">Django(DRF)</p>
                     </div>
                     <div
-                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/clangs.png" alt="">
                         <p class="">C/C++, C#</p>
                     </div>
@@ -122,17 +122,17 @@
                 <div class="flex flex-col gap-3">
                     <p class="dark:text-white text-center">Frontend</p>
                     <div
-                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/tailwind.png" alt="">
                         <p class="">Tailwind CSS</p>
                     </div>
                     <div
-                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-8 object-contain" src="assets/icons/react-native.png" alt="">
                         <p class="">React Native</p>
                     </div>
                     <div
-                        class="dark:text-white text-black gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
+                        class="dark:text-white text-white gap-2 px-3 py-2 bg-purple-700 rounded-lg text-center flex flex-row items-center">
                         <img class="h-8 w-10 object-contain" src="assets/icons/htmlcssjs.png" alt="">
                         <p class="">HTML, CSS, JS</p>
                     </div>
