--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://lyarov22.github.io/assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://lyarov22.github.io/new/assets/favicon.ico">
     <link rel="stylesheet" href="./Ilya Fedorov _ Fullstack developer portfolio_files/style.css">
     <script src="./Ilya Fedorov _ Fullstack developer portfolio_files/saved_resource"></script>
     <link href="./Ilya Fedorov _ Fullstack developer portfolio_files/flowbite.min.css" rel="stylesheet">
