--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
     <div class="pt-16">
         <h3 id="experience" class="text-gray-900 text-center dark:text-white pb-8 text-2xl">Work experience</h3>
         <div id="work-experience-container" class="flex justify-center flex-col items-center gap-10"><div class="">
+            <div class="">
+        <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+        <div class="px-5 pb-5 pt-5">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Teacher of web development</h5>
+            <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">Central Asian Technical Economical College Almaty</p>
+            <p class="mb-3 font-normal text-lg text-gray-700 dark:text-gray-400">09.2024 - by now (by now)</p>
+            <ul class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+            <li class="flex items-start">
+                <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path></svg>
+                Curriculum development, lectures and laboratory work.
+            </li><li class="flex items-start">
+                <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path></svg>
+                Conducting open lessons, seminars with speakers, advising students
+            </li><li class="flex items-start">
+                <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path></svg>
+                The use of non-standard approaches in teaching for better assimilation of material, preparation of presentations and formation of a local IT community
+            </li>
+            </ul>
+        </div>
+        </div>
+        </div>
         <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
         <div class="px-5 pb-5 pt-5">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Fullstack developer</h5>
