--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
 
     <div class="pt-16">
         <h3 id="experience" class="text-gray-900 text-center dark:text-white pb-8 text-2xl">Work experience</h3>
-        <div id="work-experience-container" class="flex justify-center flex-col items-center gap-10"><div class="">
-            <div class="">
-        <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+        <div id="work-experience-container" class="flex justify-center flex-col items-center gap-10">
+             <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
         <div class="px-5 pb-5 pt-5">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Teacher of web development</h5>
             <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">Central Asian Technical Economical College Almaty</p>
