--- a/index.html
+++ b/index.html
@@ -1379,45 +1379,77 @@
             Work experience
         </h3>
         <div id="work-experience-container" class="flex justify-center flex-col items-center gap-10">
-                        <!-- avantage -->
-                        <div class="">
-                            <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
-                                <div class="px-5 pb-5 pt-5">
-                                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                                        Fullstack Django & Next.JS developer
-                                    </h5>
-                                    <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
-                                        Avantage Group <a class="text-green-500 underline" href="https://"></a>
-                                    </p>
-                                    <p class="mb-3 font-normal text-lg text-gray-700 dark:text-gray-400">
-                                        02.2025 - now
-                                    </p>
-                                    <ul class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-                                        <li class="flex items-start">
-                                            <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
-                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                                <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
-                                            </svg>
-                                            . . .
-                                        </li>
-                                        <li class="flex items-start">
-                                            <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
-                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                                <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
-                                            </svg>
-                                            . . .
-                                        </li>
-                                        <li class="flex items-start">
-                                            <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
-                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                                <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
-                                            </svg>
-                                            . . .
-                                        </li>
-                                    </ul>
-                                </div>
+            <!-- avantage -->
+            <div class="">
+                <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+                    <div class="px-5 pb-5 pt-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            Fullstack Django & Next.JS developer
+                        </h5>
+                        <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
+                            Avantage Group <a class="text-green-500 underline" href="https://"></a>
+                        </p>
+                        <p class="mb-3 font-normal text-lg text-gray-700 dark:text-gray-400">
+                            02.2025 - now
+                        </p>
+                        <ul class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                            <li class="flex items-start">
+                                <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
+                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                    <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
+                                </svg>
+                                . . .
+                            </li>
+                            <li class="flex items-start">
+                                <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
+                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                    <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
+                                </svg>
+                                . . .
+                            </li>
+                            <li class="flex items-start">
+                                <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
+                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                    <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
+                                </svg>
+                                . . .
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+                    <!-- printo -->
+                    <div class="">
+                        <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+                            <div class="px-5 pb-5 pt-5">
+                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                                    Chief Technology Officer
+                                </h5>
+                                <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
+                                    printomat.kz <a class="text-green-500 underline" href="https://"></a>
+                                </p>
+                                <p class="mb-3 font-normal text-lg text-gray-700 dark:text-gray-400">
+                                    05.2025 - now
+                                </p>
+                                <ul class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                                    <li class="flex items-start">
+                                        <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
+                                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                            <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
+                                        </svg>
+                                        Responsible for the full development cycle of a mobile application using React Native and FastAPI: from interface design and planning to DevOps and deployment. 
+                                    </li>
+                                    <li class="flex items-start">
+                                        <svg class="w-5 h-5 text-green-500 flex-shrink-0 mr-2" fill="currentColor"
+                                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                            <path d="M8.5 14.2L5 10.7l-1.4 1.4 4.9 4.9 8.5-8.5-1.4-1.4-7.6 7.6z"></path>
+                                        </svg>
+                                        Implemented document upload and printing functionality, integrated external services, and enhanced user experience.
+                                    </li>
+                                </ul>
                             </div>
                         </div>
+                    </div>
             <!-- zoob -->
             <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
@@ -1748,7 +1780,7 @@
                     </div>
                 </div>
             </div>
-            <div class="">
+            <!-- <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
                     <a href="https://reread.onrender.com/">
                         <img class="w-full" src="./Ilya Fedorov _ Fullstack developer portfolio_files/wearshop.png"
@@ -1808,7 +1840,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
                     <a href="https://lyarov22.github.io/meteoboard/">
@@ -1839,7 +1871,7 @@
                     </div>
                 </div>
             </div>
-            <div class="">
+            <!-- <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
                     <a href="https://private-xy0ogrge.onrender.com/shop/new/">
                         <img class="w-full" src="./Ilya Fedorov _ Fullstack developer portfolio_files/ironhaul.png"
@@ -1868,7 +1900,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
                     <a href="https://github.com/lyarov22/askpl">
@@ -1913,6 +1945,20 @@
         <div id="achievements-container" class="flex justify-center flex-col items-center gap-10">
             <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+                    <img class="w-full" src="./Ilya Fedorov _ Fullstack developer portfolio_files/dec24.png"
+                        alt="Achievement photo" />
+                    <div class="px-5 pb-5 pt-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            2nd place on Decentrathon AI Hackaton GameDev Track
+                        </h5>
+                        <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
+                            Date: 11.2024
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
                     <img class="w-full" src="./Ilya Fedorov _ Fullstack developer portfolio_files/jasahub.jpg"
                         alt="Achievement photo" />
                     <div class="px-5 pb-5 pt-5">
@@ -1936,6 +1982,21 @@
                         </h5>
                         <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
                             Date: 05.2024
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="">
+                <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
+                    <img class="w-full"
+                        src="./Ilya Fedorov _ Fullstack developer portfolio_files/intc2025.jpg"
+                        alt="Achievement photo" />
+                    <div class="px-5 pb-5 pt-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            2 nd place on INTC Sport Programming 2025 (Almaty)
+                        </h5>
+                        <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
+                            Date: 05.2025
                         </p>
                     </div>
                 </div>
@@ -2116,10 +2177,10 @@
             </div>
             <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
-                    <a href="https://t.me/guitar_all">
+                    <!-- <a href="https://t.me/guitar_all">
                         <img class="w-full" src="./Ilya Fedorov _ Fullstack developer portfolio_files/guitar-all.png"
                             alt="Other project image" />
-                    </a>
+                    </a> -->
                     <div class="px-5 pb-5 pt-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                             Guitar for all Telegram Channel
@@ -2128,6 +2189,40 @@
                             Designing tabs for popular russian songs
                         </p>
                         <a href="https://t.me/guitar_all"
+                            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                            Open Link
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="px-5 pb-5 pt-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            Bishkek City Travel Guide
+                        </h5>
+                        <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
+                            Travel guide for Bishkek, Kyrgyzstan
+                        </p>
+                        <a href="/bishkek.html"
+                            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
+                            Open Link
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="px-5 pb-5 pt-5">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                            Tashkent City Travel Guide
+                        </h5>
+                        <p class="mb-3 font-semibold text-lg text-gray-700 dark:text-gray-400">
+                            Travel guide for Tashkent, Uzbekistan
+                        </p>
+                        <a href="/tashkent.html"
                             class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                             Open Link
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true"
