--- a/index.html
+++ b/index.html
@@ -1989,7 +1989,7 @@
             <div class="">
                 <div class="max-w-2xl bg-white rounded-lg shadow dark:bg-gray-800 mx-5">
                     <img class="w-full"
-                        src="./static/intc25.jpg"
+                        src="./Ilya Fedorov _ Fullstack developer portfolio_files/intc25.png"
                         alt="Achievement photo" />
                     <div class="px-5 pb-5 pt-5">
                         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
